--- a/Solde.html
+++ b/Solde.html
@@ -1,10 +1,3 @@
-<?php
-session_start();
-if(@$_SESSION["autoriser"]!="oui"){
-header("location:index.php");
-exit();
-}
-?>
 <!DOCTYPE html>
 <html>
 	<head>
@@ -42,20 +35,20 @@ exit();
  <a style="padding:0;margin:0;text-decoration:none;" href="Deco.php"><button class="logout">SE DÉCONNECTER</button></a>
 </section>
   <br />
-  <a href="#">Ma banque et moi</a>
+  <a onclick="alert()" href="#">Ma banque et moi</a>
   <hr style="background-color:#1f94a6">
-  <a href="#">Mes infos personnel</a>
+  <a onclick="alert()" href="#">Mes infos personnel</a>
   <hr style="background-color:#1f94a6">
-  <a href="#">Mes parametre</a>
+  <a onclick="alert()" href="#">Mes parametre</a>
   <hr style="background-color:#1f94a6">
-  <a href="#">Mes projets</a>
+  <a onclick="alert()" href="#">Mes projets</a>
   <hr style="background-color:#1f94a6">
   <a onclick="alert()" href="#">Mes avantages</a><hr style="background-color:#1f94a6">
  
 </div>
  
 <nav class="topnav">
-  <a href="" onclick="openNav()">
+  <a href="#" onclick="openNav()">
 	<svg width="30" height="30" id="icoOpen">
 		<path d="M0,5 30,5" stroke="#000" stroke-width="2"/>
 		<path d="M0,14 30,14" stroke="#000" stroke-width="2"/>
@@ -241,7 +234,7 @@ function closeNav() {
 <div class="agir">
 <img style="width:40%;"src="https://i.ibb.co/5Lb7ZJX/6-D597-B5-B-6-BDB-4-F3-F-B808-0-CC1-DA37-D661-removebg-preview.png"/>
 <hr style="background-color:#5c5c66">
-<p>LE CREDIT AGRICOLE</p><hr style="background-color:#5c5c66">
+<p>ING DIRECT</p><hr style="background-color:#5c5c66">
 <p>RELATION BANQUE CLIENT</p><hr style="background-color:#5c5c66">
 <p>SITES SPECIALISES</p><hr style="background-color:#5c5c66">
 <p>Accessibilité numerique du site</p><hr style="background-color:#5c5c66">
