--- a/Solde.html
+++ b/Solde.html
@@ -143,18 +143,18 @@ function closeNav() {
   </thead>-->
   <tbody>
 	<tr>
-	  <th scope="row" style="color:#347780">08/20</th>
+	  <th scope="row" style="color: #eb8634">08/20</th>
 	  <td>VIREMENT EN VOTRE FAVEUR vivrement...</td>
-	  <td colspan="2" style="color:#347780;font-weight:700;">500€</td>
+	  <td colspan="2" style="color: #eb8634;font-weight:700;">500€</td>
 	</tr>
 	<tr>
-	  <th scope="row" style="color:#347780">10/20</th>
+	  <th scope="row" style="color: #eb8634">10/20</th>
 	  <td>VIREMENT EN VOTRE FAVEUR VIREMENT...</td>
-	  <td colspan="2" style="color:#347780">500€</td>
+	  <td colspan="2" style="color: #eb8634">500€</td>
 	  
 	</tr>
 	<tr>
-	  <th scope="row" style="color:#347780">27/21</th>
+	  <th scope="row" style="color: #eb8634">27/21</th>
 	  <td colspan="2">PRELEVEMENT ALIANZ VIE ALIANZ VIE</td>
 	  <td>-178€</td>
 	</tr>
@@ -168,12 +168,12 @@ function closeNav() {
 
 <div class="livret">
 
-<p style="color:#347780;font-weight:900">Mlle LAURENCE JEANNE BODIN</p>
+<p style="color: #eb8634;font-weight:900">Mlle LAURENCE JEANNE BODIN</p>
 <!--<i class="fa fa-sun-o" style="font-size:30px;color:yellow;width:10%"></i>-->
 
 <p class="6"><b>Livret A </b style="color:gray;">n°72836273838</p>
 
-<p style="color:#3d878f;">2.43€</p>
+<p style="color: #eb8634;">2.43€</p>
 
 </div>
 <h3 style="font-family:sans-serif;" >MES PLACEMENTS</h3>
@@ -228,7 +228,7 @@ function closeNav() {
 	<ul class="navbar-nav mr-auto">
 	
 	  <li class="nav-item active">
-		<a class="nav-link" href="#"><p style="color:#347780">Mlle LAURENCE JEANNE BODIN</p><p style="color:#ffffff;font-weight:400;">INITIAL VALEUR PREVOYANCE</p><p style="color:#ffffff;font-weight:400;">Capital garanti : 8000€</p><span class="sr-only">(current)</span></a>
+		<a class="nav-link" href="#"><p style="color: #eb8634">Mlle LAURENCE JEANNE BODIN</p><p style="color:#ffffff;font-weight:400;">INITIAL VALEUR PREVOYANCE</p><p style="color:#ffffff;font-weight:400;">Capital garanti : 8000€</p><span class="sr-only">(current)</span></a>
 	  </li>
 	  
 	</ul>
