--- a/Solde.html
+++ b/Solde.html
@@ -47,13 +47,13 @@
 </section>
   <br />
   <a onclick="alert()" href="#">Ma banque et moi</a>
-  <hr style="background-color:#1f94a6">
+  <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes infos personnel</a>
-  <hr style="background-color:#1f94a6">
+  <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes parametre</a>
-  <hr style="background-color:#1f94a6">
+  <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes projets</a>
-  <hr style="background-color:#1f94a6">
+  <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes avantages</a><hr style="background-color:#1f94a6">
  
 </div>
