--- a/Solde.html
+++ b/Solde.html
@@ -54,7 +54,7 @@
   <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes projets</a>
   <hr style="background-color:#fff">
-  <a onclick="alert()" href="#">Mes avantages</a><hr style="background-color:#1f94a6">
+  <a onclick="alert()" href="#">Mes avantages</a><hr style="background-color:#fff">
  
 </div>
  
