--- a/Solde.html
+++ b/Solde.html
@@ -50,7 +50,7 @@
   <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes infos personnel</a>
   <hr style="background-color:#fff">
-  <a onclick="alert()" href="#">Mes parametre</a>
+  <a onclick="alert()" href="#">Mes parametres</a>
   <hr style="background-color:#fff">
   <a onclick="alert()" href="#">Mes projets</a>
   <hr style="background-color:#fff">
@@ -87,7 +87,7 @@ function closeNav() {
 <br />
 <br />
 <p style="font-family:sans-serif;font-weight:700;padding:5px;">Bonjour</p>
-<p style="font-family:sans-serif;font-weight:700;padding:5px;line-height:1px;">Mlle LAURENCE JEANNE BODIN</p>
+<p style="font-family:sans-serif;font-weight:700;padding:5px;line-height:1px;">Mme LAURENCE JEANNE BODIN</p>
 
 <p style="color:gray;font-family:arial;padding:5px">derniere connexion au <b class="date" style="font-family:sans-serif;font-size:10px;color:gray;"></b></p>
 
@@ -99,7 +99,7 @@ function closeNav() {
 
 <div class="left">
 
-<p>Mlle LAURENCE JEANNE BODIN</p>
+<p>Mme LAURENCE JEANNE BODIN</p>
 <sub><p>COMPTE DE DEPOT N°627828</p></sub>
 
 
@@ -149,12 +149,12 @@ function closeNav() {
 
 </div>
 
-<h3 style="font-family:sans-serif;" >MON EPARGNES DISPONIBLE</h3>
+<h3 style="font-family:sans-serif;" >MON EPARGNE DISPONIBLE</h3>
 
 
 <div class="livret">
 
-<p style="color: #eb8634;font-weight:900">Mlle LAURENCE JEANNE BODIN</p>
+<p style="color: #eb8634;font-weight:900">Mme LAURENCE JEANNE BODIN</p>
 <!--<i class="fa fa-sun-o" style="font-size:30px;color:yellow;width:10%"></i>-->
 
 <p class="6"><b>Livret A </b style="color:gray;">n°72836273838</p>
@@ -214,7 +214,7 @@ function closeNav() {
 	<ul class="navbar-nav mr-auto">
 	
 	  <li class="nav-item active">
-		<a class="nav-link" href="#"><p style="color: #eb8634">Mlle LAURENCE JEANNE BODIN</p><p style="color:#ffffff;font-weight:400;">INITIAL VALEUR PREVOYANCE</p><p style="color:#ffffff;font-weight:400;">Capital garanti : 8000€</p><span class="sr-only">(current)</span></a>
+		<a class="nav-link" href="#"><p style="color: #eb8634">Mme LAURENCE JEANNE BODIN</p><p style="color:#ffffff;font-weight:400;">INITIAL VALEUR PREVOYANCE</p><p style="color:#ffffff;font-weight:400;">Capital garanti : 8000€</p><span class="sr-only">(current)</span></a>
 	  </li>
 	  
 	</ul>
