--- a/Solde.html
+++ b/Solde.html
@@ -46,15 +46,15 @@
  <a style="padding:0;margin:0;text-decoration:none;" href="https://authentification-connexion-a-mon-compte.000webhostapp.com/Deco.php"><button class="logout">SE DÉCONNECTER</button></a>
 </section>
   <br />
-  <a onclick="alert()" href="#">Ma banque et moi</a>
+  <a href="#">Ma banque et moi</a>
   <hr style="background-color:#fff">
-  <a onclick="alert()" href="#">Mes infos personnel</a>
+  <a href="#">Mes infos personnel</a>
   <hr style="background-color:#fff">
-  <a onclick="alert()" href="#">Mes parametres</a>
+  <a href="#">Mes parametres</a>
   <hr style="background-color:#fff">
-  <a onclick="alert()" href="#">Mes projets</a>
+  <a href="#">Mes projets</a>
   <hr style="background-color:#fff">
-  <a onclick="alert()" href="#">Mes avantages</a><hr style="background-color:#fff">
+  <a href="#">Mes avantages</a><hr style="background-color:#fff">
  
 </div>
  
