--- a/Solde.html
+++ b/Solde.html
@@ -48,13 +48,13 @@
   <br />
   <a href="#">Ma banque et moi</a>
   <hr style="background-color:#fff">
-  <a href="#">Mes infos personnel</a>
+  <a href="#">informations personnelles</a>
   <hr style="background-color:#fff">
-  <a href="#">Mes parametres</a>
+  <a href="#">paramètres</a>
   <hr style="background-color:#fff">
-  <a href="#">Mes projets</a>
+ <!-- <a href="#">Mes projets</a>
   <hr style="background-color:#fff">
-  <a href="#">Mes avantages</a><hr style="background-color:#fff">
+  <a href="#">Mes avantages</a><hr style="background-color:#fff">-->
  
 </div>
  
@@ -129,18 +129,18 @@ function closeNav() {
   </thead>-->
   <tbody>
 	<tr>
-	  <th scope="row" style="color: #eb8634">08/20</th>
+	  <th scope="row" style="color: #eb8634">08/21</th>
 	  <td>VIREMENT EN VOTRE FAVEUR vivrement...</td>
-	  <td colspan="2" style="color: #eb8634;font-weight:700;">500€</td>
+	  <td colspan="2" style="color: #eb8634;font-weight:700;">12.000€</td>
 	</tr>
 	<tr>
-	  <th scope="row" style="color: #eb8634">10/20</th>
+	  <th scope="row" style="color: #eb8634">08/21</th>
 	  <td>VIREMENT EN VOTRE FAVEUR VIREMENT...</td>
 	  <td colspan="2" style="color: #eb8634">500€</td>
 	  
 	</tr>
 	<tr>
-	  <th scope="row" style="color: #eb8634">27/21</th>
+	  <th scope="row" style="color: #eb8634">11/21</th>
 	  <td colspan="2">PRELEVEMENT ALIANZ VIE ALIANZ VIE</td>
 	  <td>-178€</td>
 	</tr>
