--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <br /><br />
 <div class="sec">
 <br /><br /><br />
+<center><i class='fas fa-user-shield' style='font-size:30px;color:#fff'></i></center>
+
 <center><p>naviguez les yeux fermez</p></center>
 <center><a href="#">avec notre systeme de sécurité</a></center>
 </div>
